--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,4 @@
 CP := $(shell find . -type f -iregex ".*\.cpp")
-HP := $(shell find . -type f -iregex ".*\.hpp")
-
+# HP := $(shell find . -type f -iregex ".*\.hpp")
 all:
-	echo $(CP) $(HP) 
-	g++ $(CP) $(HP) -I. -o pacman
+	g++ $(CP) -I. -o pacman
