--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
 CP := $(shell find . -type f -iregex ".*\.cpp")
-# HP := $(shell find . -type f -iregex ".*\.hpp")
+HP := $(shell find . -type f -iregex ".*\.hpp")
 all:
-	g++ $(CP) -I. -o pacman
+	g++ $(CP) $(HP) -I. -o pacman
