add missing dep for image

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
 CP := $(shell find . -type f -iregex ".*\.cpp")
 HP := $(shell find . -type f -iregex ".*\.hpp")
 all:
-	g++ $(HP) $(CP) -I. -o pacman -g -ggdb -lglut -lGLU -lGL -lm 
+	g++ $(HP) $(CP) -I. -o pacman -g -ggdb -lglut -lGLU -lGL -lm -ljpeg
