--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CP := $(shell find . -type f -iregex ".*\.cpp")
 HP := $(shell find . -type f -iregex ".*\.hpp")
 all:
-	g++ $(HP) $(CP) -I. -o pacman -g -ggdb -lglut -lGLU -lGL -lm -ljpeg
+	g++ $(HP) $(CP) -I. -o pacman -g -ggdb -lglut -lGLU -lGL -lm -ljpeg -O3
 
 clean:
 	rm -f pacman
